--- a/frame/ethereum/Cargo.toml
+++ b/frame/ethereum/Cargo.toml
@@ -10,14 +10,14 @@ license = "Apache-2.0"
 rustc-hex = { version = "2.1.0", default-features = false }
 serde = { version = "1.0.101", optional = true }
 codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
-frame-support = { version = "3.0.0", default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
-frame-system = { version = "3.0.0", default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
-pallet-balances = { version = "3.0.0", default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
-pallet-timestamp = { version = "3.0.0", default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
+frame-support = { version = "3.0.0", default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
+frame-system = { version = "3.0.0", default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
+pallet-balances = { version = "3.0.0", default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
+pallet-timestamp = { version = "3.0.0", default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
 pallet-evm = { version = "3.0.1-dev", default-features = false, path = "../evm" }
-sp-runtime = { version = "3.0.0", default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
-sp-std = { version = "3.0.0", default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
-sp-io = { version = "3.0.0", default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
+sp-runtime = { version = "3.0.0", default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
+sp-std = { version = "3.0.0", default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
+sp-io = { version = "3.0.0", default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
 fp-evm = { version = "1.0.1-dev", default-features = false, path = "../../primitives/evm" }
 evm = { version = "0.26.0", features = ["with-codec"], default-features = false }
 ethereum = { version = "0.7.1", default-features = false, features = ["with-codec"] }
@@ -30,7 +30,7 @@ fp-rpc = { version = "1.0.1-dev", path = "../../primitives/rpc", default-feature
 fp-storage = { version = "1.0.1-dev", path = "../../primitives/storage", default-features = false}
 
 [dev-dependencies]
-sp-core = { version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
+sp-core = { version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up" }
 
 [features]
 default = ["std"]
